syntax = "proto3";

import "prop.proto";
import "tag_data.proto";


message WriteResponse {
    int32 code = 11;
    bool success = 12;
    map<string, Prop> props = 13;
}

message Tag {
    string path = 1;
    DataType type = 2;
    map<string, Prop> props = 3;

    bool writable = 4;
    repeated WriteResponse responses = 5;
}